@@ -57,7 +57,7 @@ public class ListContainerOptions extends BaseHttpRequestOptions {
 
    public int getMaxResults() {
       String val = getFirstQueryOrNull("limit");
-      return val != null ? new Integer(val) : 10000;
+      return val != null ? Integer.valueOf(val) : 10000;
    }
 
    /**
