@@ -65,8 +65,8 @@ public class BindBlobToMultipartFormTest {
       HttpRequest request = HttpRequest.builder().method("GET").endpoint("http://localhost:8001").build();
       binder.bindToRequest(request, TEST_BLOB);
 
-      assertEquals(Strings2.toStringAndClose(request.getPayload().getInput()), EXPECTS);
-      assertEquals(request.getPayload().getContentMetadata().getContentLength(), new Long(113));
+      assertEquals(Strings2.toString(request.getPayload()), EXPECTS);
+      assertEquals(request.getPayload().getContentMetadata().getContentLength(), Long.valueOf(113));
 
       assertEquals(request.getPayload().getContentMetadata().getContentType(), "multipart/form-data; boundary="
             + BOUNDARY);
