@@ -190,14 +190,14 @@ public class ParallelMultipartUploadStrategy implements AsyncMultipartUploadStra
                         CountDownLatch latch = new CountDownLatch(effectiveParts);
                         int part;
                         while ((part = algorithm.getNextPart()) <= parts) {
-                           Integer partKey = new Integer(part);
+                           Integer partKey = Integer.valueOf(part);
                            activeParts.put(partKey);
                            prepareUploadPart(container, key, uploadId, partKey, payload, 
                                  algorithm.getNextChunkOffset(), chunkSize, etags, 
                                  activeParts, futureParts, errors, maxRetries, errorMap, toRetry, latch);
                         }
                         if (remaining > 0) {
-                           Integer partKey = new Integer(part);
+                           Integer partKey = Integer.valueOf(part);
                            activeParts.put(partKey);
                            prepareUploadPart(container, key, uploadId, partKey, payload, 
                                  algorithm.getNextChunkOffset(), remaining, etags, 
@@ -210,7 +210,7 @@ public class ParallelMultipartUploadStrategy implements AsyncMultipartUploadStra
                            CountDownLatch retryLatch = new CountDownLatch(atOnce);
                            for (int i = 0; i < atOnce; i++) {
                               Part failedPart = toRetry.poll();
-                              Integer partKey = new Integer(failedPart.getPart());
+                              Integer partKey = Integer.valueOf(failedPart.getPart());
                               activeParts.put(partKey);
                               prepareUploadPart(container, key, uploadId, partKey, payload, 
                                     failedPart.getOffset(), failedPart.getSize(), etags, 
