@@ -89,7 +89,7 @@ public class Address implements Comparable<Address> {
 
    @Override
    public int compareTo(Address arg0) {
-      return new Integer(id).compareTo(arg0.getId());
+      return Integer.valueOf(id).compareTo(arg0.getId());
    }
 
    /**
